Changelog for Poi
=================


1.2.6 (unreleased)
------------------

- Catch and log SMTPExceptions when sending an email fails.
  Fixes http://plone.org/products/poi/issues/223
  [maurits]

- Uploading a file in an issue could fail needlessly due to a
  translation error while validating.  Fixes UnicodeDecodeError at
  http://plone.org/products/poi/issues/220
  [maurits]

- Allow translation of email's subject.
  Fixes http://plone.org/products/poi/issues/219
  [kdeldycke]

- Made the restricted state the initial state of a new tracker.
  [maurits]


1.2.5 (2009-07-08)
------------------

- Register a basically empty content exporter for issues, as they can
  give unicode errors when making a snapshot in portal_setup.  See
  http://plone.org/products/poi/issues/217
  [maurits]

- Added missing strings in german translation
  [jensens]

- Explicitly depend on Products.DataGridField >= 1.6b3 as that is the
  first pypi release.  That release has a GS profile (that we depend
  on in our metadata.xml) and it has the isDataGridFilled validator
  (that we now remove from Poi).  Removed DataGridField from the quick
  installer dependencies as we indeed now list this dependency in
  metadata.xml.
  [maurits]

- Added dependencies to metadata.xml in profile.
  [jensens]


1.2.4 (2009-05-30)
------------------

- Deal with AttributeError in migration when called from the
  prefs_install_products_form (Plone 3.3) as we have no REQUEST object
  then.
  [maurits]

- Registered a checker for one of the upgrade steps, so this step is
  always available when there are old style PoiResponses.
  [maurits]

- Removed some event subscribers for old style responses, as they were
  not needed anymore and they might slow down the migration a bit.
  [maurits]

- Added state 'restricted' to poi tracker workflow; in this state
  anonymous can view issues and responses, but only members can add
  them.  Default stays the same: open for submissions from everyone.