@@ -489,10 +489,27 @@ class PoiTracker(BaseBTreeFolder, BrowserDefaultMixin):
 
         toRemove = [m for m in currentManagers if m not in managers]
         toAdd = [m for m in managers if m not in currentManagers]
-        if toRemove:
-            self.manage_delLocalRoles(toRemove)
+        toKeep = [m for m in managers if m in currentManagers]
+        for userId in toRemove:
+            local_roles = list(self.get_local_roles_for_userid(userId))
+            if 'Manager' in local_roles:
+                local_roles.remove('Manager')
+                if local_roles:
+                    # One or more roles must be given
+                    self.manage_setLocalRoles(userId, local_roles)
+                else:
+                    self.manage_delLocalRoles(toRemove)
         for userId in toAdd:
-            self.manage_setLocalRoles(userId, ['Manager'])
+            local_roles = list(self.get_local_roles_for_userid(userId))
+            local_roles.append('Manager')
+            self.manage_setLocalRoles(userId, local_roles)
+        # When creating a tracker as non-manager you used to become
+        # only Owner and not Manager, which is not what we want.
+        for userId in toKeep:
+            local_roles = list(self.get_local_roles_for_userid(userId))
+            if not 'Manager' in local_roles:
+                local_roles.append('Manager')
+                self.manage_setLocalRoles(userId, local_roles)
 
     security.declarePublic('getIssueWorkflowStates')
     def getIssueWorkflowStates(self):
